test/distributions/bharshbarg/stencil/localReads.good
Success
localReads.chpl:18: error: halt reached - array index out of bounds:
