test/distributions/bharshbarg/stencil/localReads.prediff
#!/usr/bin/env bash

sed -e 's/bounds:.*$/bounds:/' $2 > $2.tmp
mv $2.tmp $2

